<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/rounded_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Choose a number"
        android:textColor="@color/bluedark"
        android:fontFamily="@font/viga"
        android:textSize="28sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editCurrentNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="---"
        android:inputType="number"
        android:text=""
        android:layout_gravity="center"
        android:textColor="@color/bluedark"
        android:textColorHint="#DDDDDD"
        android:maxLength="9"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:fontFamily="@font/viga"
        android:background="@drawable/outlineforbutton"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="@color/bluedark"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />
</LinearLayout>
