<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/text_number"
    android:layout_width="160dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:text="50"
    android:textSize="45sp"
    android:textColor="@color/bluedark"
    android:fontFamily="@font/viga" />
